--- a/configure.ac
+++ b/configure.ac
@@ -29,13 +29,63 @@ PKG_PROG_PKG_CONFIG
 #AC_PROG_LN_S
 
 dnl --------------------------------------------------------------------------
-dnl Declare variables
+dnl declare variables
 dnl --------------------------------------------------------------------------
 AC_SUBST(AM_CFLAGS,"")
 AC_SUBST(CLDD_CFLAGS)
 AC_SUBST(CLDD_LIBS)
 CLDD_LIBS=""
 CLDD_CFLAGS=""
+
+dnl --------------------------------------------------------------------------
+dnl --with-<foo> options, pass --without-<foo> to disable
+dnl --------------------------------------------------------------------------
+AC_ARG_WITH([distro],
+    [AS_HELP_STRING([--with-distro],
+                    [Configure for a specific distribution (supported values: generic, redhat, suse, debian, gentoo, slackware; default is to autodetect)])],
+    [DISTRO=$withval])
+AC_ARG_WITH([initdir],
+    [AS_HELP_STRING([--with-initdir],
+                    [Override directory for init scripts (default is distribution-specific)])],
+    [INITDIR=$withval])
+
+dnl --------------------------------------------------------------------------
+dnl check which distribution we're running on in order to correctly handle
+dnl installation of the init.d/rc.d script
+dnl --------------------------------------------------------------------------
+if test -z $DISTRO; then
+    AC_CHECK_FILE(/etc/arch-release,   [DISTRO="arch"])
+    AC_CHECK_FILE(/etc/gentoo-release, [DISTRO="gentoo"])
+    AC_CHECK_FILE(/etc/redhat-release, [DISTRO="redhat"])
+    AC_CHECK_FILE(/etc/debian_version, [DISTRO="debian"])
+fi
+case "$DISTRO" in
+    arch)
+        AC_MSG_NOTICE([configured for Arch.])
+        ;;
+    gentoo)
+        AC_MSG_NOTICE([configured for Gentoo.])
+        ;;
+    redhat)
+        test -z $INITDIR && INITDIR="$sysconfdir/rc.d/init.d"
+        AC_MSG_NOTICE([configured for Red Hat (includes Fedora, RHEL, CentOS).])
+        ;;
+    debian)
+        AC_MSG_NOTICE([configured for Debian (includes Ubuntu).])
+        ;;
+    "")
+        AC_MSG_WARN([Unable to determine what distribution we are running on.
+                     Distribution-specific features will be disabled.])
+        ;;
+esac
+
+dnl INITDIR may be set with --with-initdir, or set in the distro
+dnl detection magic above. If unset down to here, use a sensible
+dnl default.
+test -z $INITDIR && INITDIR="$sysconfdir/init.d"
+
+AC_SUBST(DISTRO)
+AC_SUBST(INITDIR)
 
 dnl ---------------------------------------------------------------------------
 dnl Headers/Libraries
