--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -3,14 +3,30 @@ if ENABLE_TESTS
 TEST_PROGS =
 noinst_PROGRAMS = $(TEST_PROGS)
 
-TEST_PROGS += queue
+TEST_PROGS += queue llist
 
-queue_CFLAGS = \
+progs_cflags = \
+	-I$(top_srcdir)/src \
 	$(AM_CFLAGS) \
 	$(CLDD_CFLAGS)
 
-queue_LDADD = \
+# there's probably a better way to achieve this, like sticking common code
+# in a shared library... later
+progs_ldadd = \
+	$(top_srcdir)/src/cldd-adt.o \
+	$(top_srcdir)/src/cldd-client.o \
+	$(top_srcdir)/src/cldd-cmdline.o \
+	$(top_srcdir)/src/cldd-conf.o \
+	$(top_srcdir)/src/cldd-daemon.o \
+	$(top_srcdir)/src/cldd-error.o \
+	$(top_srcdir)/src/cldd-log.o \
+	$(top_srcdir)/src/cldd-server.o \
+	$(top_srcdir)/src/cldd-utils.o \
 	$(CLDD_LIBS)
+
+# queue
+queue_CFLAGS = $(progs_cflags)
+queue_LDADD = $(progs_ldadd)
 
 queue_headers = \
 	$(top_srcdir)/src/common.h \
@@ -19,7 +35,19 @@ queue_headers = \
 
 queue_SOURCES = \
 	$(queue_headers) \
-	$(top_srcdir)/src/adt.c \
 	test-queue.c
+
+# llist
+llist_CFLAGS = $(progs_cflags)
+llist_LDADD = $(progs_ldadd)
+
+llist_headers = \
+	$(top_srcdir)/src/common.h \
+	$(top_srcdir)/src/cldd.h \
+	$(top_srcdir)/src/adt.h
+
+llist_SOURCES = \
+	$(llist_headers) \
+	test-llist.c
 
 endif
