Added doxygen support for documentation

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,9 @@
 ACLOCAL_AMFLAGS = -I m4
 AUTOMAKE_OPTIONS = foreign 1.9 dist-bzip2 subdir-objects
 
+# Doxygen support
+include $(top_srcdir)/aminclude.am
+
 # add these in later (this needs additional checking for distro)
 #init_d_dir = $(sysconfdir)/rc.d
 #init_d_SCRIPTS = $(PACKAGE)
@@ -18,4 +21,5 @@ SUBDIRS = \
 #
 
 EXTRA_DIST = \
-	autogen.sh
+	autogen.sh \
+	doxygen.cfg
