--- a/configure.ac
+++ b/configure.ac
@@ -1,68 +1,104 @@
 dnl ---------------------------------------------------------------------------
-dnl Process this file with autoconf to produce a configure script. At this
-dnl point this just uses very pedestrian settings.
+dnl Process this file with autoconf to produce a configure script.
 dnl ---------------------------------------------------------------------------
 
-AC_PREREQ(2.59)
-AC_INIT([cldd],[0.2.0],[geoff.jay@gmail.com])
-AC_CONFIG_SRCDIR([src/main.c])
-AM_INIT_AUTOMAKE([dist-bzip2])
-AC_CONFIG_HEADER([config.h])
+AC_INIT([cldd], [0.1])
 AC_CONFIG_MACRO_DIR([m4])
-AM_MAINTAINER_MODE
-AC_ISC_POSIX
-CFLAGS="$CFLAGS"
+AC_CONFIG_SRCDIR([src/cldd.vala])
 
-AC_DEFINE(PROTOCOL_VERSION, "0.2.0", [The CLD protocol version])
+AM_INIT_AUTOMAKE([foreign no-dist-gzip dist-xz])
+AC_CONFIG_HEADERS([config.h])
+AM_MAINTAINER_MODE
+
+dnl Enable silent rules is available
+m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
+
+AC_DEFINE(VERSION, "0.1", "cldd")
 
 dnl ---------------------------------------------------------------------------
 dnl Programs
 dnl ---------------------------------------------------------------------------
-dnl AC_PROG_CC_C99
-AC_PROG_CXX
-AC_PROG_RANLIB
-AM_PROG_CC_C_O
+AC_PROG_CC
+AM_PROG_CC_STDC
+AM_PROG_VALAC([0.12.0])
 AC_PROG_INSTALL
+AC_PROG_LN_S
 AC_PROG_MAKE_SET
-PKG_PROG_PKG_CONFIG
-#AM_PROG_CC_STDC
-#AC_PROG_LN_S
 
 dnl --------------------------------------------------------------------------
 dnl Declare variables
 dnl --------------------------------------------------------------------------
-AC_SUBST(AM_CFLAGS,"")
-AC_SUBST(CLDD_CFLAGS)
-AC_SUBST(CLDD_LIBS)
-CLDD_LIBS=""
-CLDD_CFLAGS=""
+AC_SUBST(PACKAGE_CFLAGS)
+AC_SUBST(PACKAGE_LIBS)
+PACKAGE_CFLAGS=""
+PACKAGE_LIBS=""
 
-dnl Installation paths - there's got to be a better way to do this
-if test "x$prefix" = "xNONE" ; then
-	prefix="/usr/local"
-fi
+AC_SET_DEFAULT_PATHS_SYSTEM
 
-if test "x$exec_prefix" = "xNONE" ; then
-	exec_prefix=$prefix
-fi
-
-if test "x$sysconfdir" = "xNONE" ; then
-	sysconfdir="$prefix/etc"
-fi
-
-PREFIX=$prefix
-AC_SUBST(PREFIX)
-
-SYSCONFDIR="$prefix/etc"
+SYSCONFDIR="$ac_default_prefix/etc"
 AC_SUBST(SYSCONFDIR)
 
-AC_DEFINE_UNQUOTED(DATADIR, "$SYSCONFDIR/$PACKAGE", [
-	Define the read-only architecture-independent data directory.
-	])
+dnl Add setup for installation directories
+AC_DEFINE_UNQUOTED(DATADIR, "$SYSCONFDIR/$PACKAGE",
+                   [Define the architecture-independent data directory.])
+
+dnl Library checks
+VALA_PACKAGES=""
+
+dnl ---------------------------------------------------------------------------
+dnl Headers/Libraries
+dnl ---------------------------------------------------------------------------
+PKG_CHECK_MODULES([GLIB], [glib-2.0 gthread-2.0 gmodule-2.0 gobject-2.0],,
+    [AC_MSG_ERROR([glib2 is required])])
+
+AC_ARG_WITH(gee08, AS_HELP_STRING([--with-gee08], [Use libgee-0.8]), [with_gee08=yes], [with_gee08=no])
+AS_IF([test "x$with_gee08" != "xno"],
+      [AC_DEFINE(WITH_GEE_08, [1], ["Using libgee-0.8"])]
+      [PKG_CHECK_MODULES([GEE], [gee-0.8], [VALA_PACKAGES="$VALA_PACKAGES --pkg gee-0.8"],
+                         [AC_MSG_ERROR([libgee-0.8 is required])])])
+
+dnl This may be more aptly named gee06
+AC_ARG_WITH(gee10, AS_HELP_STRING([--with-gee10], [Use libgee-1.0]), [with_gee10=yes], [with_gee10=no])
+AS_IF([test "x$with_gee10" != "xno"],
+      [AC_DEFINE(WITH_GEE_10, [1], ["Using libgee-1.0"])]
+      [PKG_CHECK_MODULES([GEE], [gee-1.0], [VALA_PACKAGES="$VALA_PACKAGES --pkg gee-1.0"],
+                         [AC_MSG_ERROR([libgee-1.0 is required])])])
+
+PKG_CHECK_MODULES([CLD], [cld-0.2],
+    [VALA_PACKAGES="$VALA_PACKAGES --pkg cld-0.2"],
+    [AC_MSG_ERROR([cld-0.2 is required])])
+
+PKG_CHECK_MODULES([DAEMON], [libdaemon],
+    [VALA_PACKAGES="$VALA_PACKAGES --pkg libdaemon"],
+    [AC_MSG_ERROR([libdaemon is required])])
+
+PKG_CHECK_MODULES([XML], [libxml-2.0],
+    [VALA_PACKAGES="$VALA_PACKAGES --pkg libxml-2.0"],
+    [AC_MSG_ERROR([libxml-2.0 is required])])
+
+PKG_CHECK_MODULES([ZMQ], [libzmq],
+    [VALA_PACKAGES="$VALA_PACKAGES --pkg libzmq"],
+    [AC_MSG_ERROR([libzmq is required])])
+
+dnl Comedi
+AC_ARG_WITH(comedi, AS_HELP_STRING([--with-comedi], [Use Comedi drivers]), [with_comedi=yes], [with_comedi=no])
+AS_IF([test "x$with_comedi" != "xno"],
+      [AC_DEFINE(USE_COMEDI, [1], ["Comedi drivers"])]
+      [PKG_CHECK_MODULES([COMEDI], [comedi],,
+                         [AC_MSG_ERROR([Comedi is required])])])
+
+dnl Package setup for Vala files
+AC_SUBST(VALA_PACKAGES)
+
+dnl Header checks
+AC_HEADER_STDC
+AC_CHECK_HEADERS([stdlib.h])
+AC_CHECK_HEADERS([valgrind/memcheck.h])
 
 dnl --------------------------------------------------------------------------
-dnl --with-<foo> options, pass --without-<foo> to disable
+dnl Build options.
 dnl --------------------------------------------------------------------------
+
 AC_ARG_WITH([distro],
 	[AS_HELP_STRING([--with-distro],
 					[Configure for a specific distribution (supported values: generic, redhat, suse, debian, gentoo, slackware; default is to autodetect)])],
@@ -71,6 +107,14 @@ AC_ARG_WITH([initdir],
 	[AS_HELP_STRING([--with-initdir],
 					[Override directory for init scripts (default is distribution-specific)])],
 	[INITDIR=$withval])
+
+dnl INITDIR may be set with --with-initdir, or set in the distro
+dnl detection magic above. If unset down to here, use a sensible
+dnl default.
+test -z $INITDIR && INITDIR="$sysconfdir/init.d"
+
+AC_SUBST(DISTRO)
+AC_SUBST(INITDIR)
 
 dnl --------------------------------------------------------------------------
 dnl check which distribution we're running on in order to correctly handle
@@ -102,83 +146,6 @@ case "$DISTRO" in
 		;;
 esac
 
-dnl INITDIR may be set with --with-initdir, or set in the distro
-dnl detection magic above. If unset down to here, use a sensible
-dnl default.
-test -z $INITDIR && INITDIR="$sysconfdir/init.d"
-
-AC_SUBST(DISTRO)
-AC_SUBST(INITDIR)
-
-dnl ---------------------------------------------------------------------------
-dnl Headers/Libraries
-dnl ---------------------------------------------------------------------------
-AC_CHECK_FUNCS(daemon fork syslog)
-if test $ac_cv_func_syslog = no; then
-	# syslog is not in the default libraries.  See if it's in some other.
-	for lib in bsd socket inet; do
-		AC_CHECK_LIB($lib, syslog,
-			[AC_DEFINE(HAVE_SYSLOG)
-			LIBS="$LIBS -l$lib"; break])
-	done
-fi
-
-dnl Some examples check this so might want to come back to this later for
-dnl cross platform support.
-dnl AC_CHECK_FUNS(vsnprintf)
-
-AC_CHECK_LIB(socket, socket, CLDD_LIBS="$CLDD_LIBS -lsocket",)
-AC_CHECK_LIB(nsl, gethostbyname, CLDD_LIBS="$CLDD_LIBS -lnsl",)
-AC_CHECK_LIB(pthread, pthread_create, CLDD_LIBS="$CLDD_LIBS -pthread")
-AC_CHECK_LIB(m, cos, CLDD_LIBS="$CLDD_LIBS -lm")
-AC_CHECK_LIB(rt, clock_gettime, CLDD_LIBS="$CLDD_LIBS -lrt")
-dnl AC_CHECK_LIB(gthread-2.0, g_thread_init)
-
-AC_HEADER_STDC
-AC_CHECK_HEADERS([stdlib.h])
-AC_CHECK_HEADERS([valgrind/memcheck.h])
-
-PKG_CHECK_MODULES([GLIB], [glib-2.32 gobject-2.0 gthread-2.0],
-	[AC_DEFINE(HAVE_GLIB232, [], [GLib 2.32 available])],
-	[PKG_CHECK_MODULES([GLIB], [glib-2.0 gobject-2.0 gthread-2.0],,
-		[AC_MSG_ERROR([glib-2.0 is required])])
-	])
-AC_SUBST(GLIB_CFLAGS)
-AC_SUBST(GLIB_LIBS)
-
-dnl PKG_CHECK_MODULES([GLIBTOP], [libgtop-2.0],,
-dnl 	[AC_MSG_ERROR([libgtop-2.0 is required])])
-
-PKG_CHECK_MODULES([GEE], [gee-1.0],,
-	[AC_MSG_ERROR([gee-1.0 is required])])
-AC_SUBST(GEE_CFLAGS)
-AC_SUBST(GEE_LIBS)
-
-PKG_CHECK_MODULES([XML], [libxml-2.0],,
-	[AC_MSG_ERROR([libxml-2.0 is required])])
-AC_SUBST(XML_CFLAGS)
-AC_SUBST(XML_LIBS)
-
-PKG_CHECK_MODULES([CLD], [cldd-0.2 cld-0.2],,
-	[AC_MSG_ERROR([libcldd-0.2 and libcld-0.2 are required])])
-AC_SUBST(CLD_CFLAGS)
-AC_SUBST(CLD_LIBS)
-
-dnl ---------------------------------------------------------------------------
-dnl Comedi - requires comedi.pc
-dnl ---------------------------------------------------------------------------
-AC_ARG_WITH(comedi,
-[  --with-comedi		  use Comedi drivers],
-	[use_comedi=$withval],
-	[use_comedi=no])
-AC_MSG_RESULT(checking whether Comedi drivers were selected... $use_comedi)
-
-if test "x$use_comedi" != "xno" ; then
-	PKG_CHECK_MODULES([COMEDI], [comedi],,
-		[AC_MSG_ERROR([Comedi is required])])
-	AC_DEFINE(USE_COMEDI, [1], [Comedi Drivers])
-fi
-
 dnl ---------------------------------------------------------------------------
 dnl Allow tools to be specifically built
 dnl ---------------------------------------------------------------------------
@@ -187,145 +154,61 @@ AC_ARG_ENABLE(debug,
 		[enable debugging (default: disabled)]),,
 	[enable_debug=no])
 
-AC_ARG_ENABLE(tests,
-	AS_HELP_STRING([--enable-tests],
-		[build test programs (default: disabled)]),,
-	[enable_tests=no])
-
-AM_CONDITIONAL(ENABLE_TESTS, test "x$enable_tests" = xyes)
-
-if test "x$enable_tests" = xyes; then
-	CLDD_FLAGS="-I/src"
-fi
-
-AC_ARG_ENABLE(ipv6,
-	AS_HELP_STRING([--disable-ipv6],
-		[disable IPv6 support (default: enable)]),,
-	[enable_ipv6=yes])
-
-AC_ARG_ENABLE(tcp,
-	AS_HELP_STRING([--disable-tcp],
-		[disable support for clients connecting via TCP (default: enable)]),,
-	[enable_tcp=yes])
-
-AC_ARG_ENABLE(un,
-	AS_HELP_STRING([--disable-un],
-		[disable support for clients connecting via unix domain sockets (default: enable)]),,
-	[enable_un=yes])
-
-AC_ARG_ENABLE(werror,
-	AS_HELP_STRING([--enable-werror],
-		[treat warnings as errors (default: disabled)]),,
-	[enable_werror=no])
-
-dnl ---------------------------------------------------------------------------
-dnl Protocol Options
-dnl ---------------------------------------------------------------------------
-
-if test x$enable_tcp = xno; then
-	# if we don't support TCP, we don't need IPv6 either
-	enable_ipv6=no
-fi
-
-if test x$enable_ipv6 = xyes; then
-	AC_MSG_CHECKING(for ipv6)
-	AC_EGREP_CPP([AP_maGiC_VALUE],
-	[
-#include <sys/types.h>
-#include <sys/socket.h>
-#include <netdb.h>
-#ifdef PF_INET6
-#ifdef AF_INET6
-AP_maGiC_VALUE
-#endif
-#endif
-	],
-	AC_DEFINE(HAVE_IPV6, 1, [Define if IPv6 support present])
-	AC_MSG_RESULT([yes]),
-	AC_MSG_RESULT([no])
-)
-fi
-
-if test x$enable_tcp = xyes; then
-	AC_DEFINE(HAVE_TCP, 1, [Define if TCP socket support is enabled])
-fi
-
-if test x$enable_un = xyes; then
-	AC_DEFINE(HAVE_UN, 1, [Define if unix domain socket support is enabled])
-	STRUCT_UCRED
-	AC_CHECK_FUNCS(getpeereid)
-fi
-
-if
-	test x$enable_tcp = xno &&
-	test x$enable_un = xno; then
-	AC_MSG_ERROR([No client interfaces configured!])
-fi
-
-if test x$enable_largefile != xno; then
-	AC_DEFINE([ENABLE_LARGEFILE], 1, [Define if large file support is enabled])
-fi
-
-if test "x$enable_werror" = xyes; then
-	AM_CFLAGS="$AM_CFLAGS -Werror -pedantic-errors"
-fi
-
-dnl ---------------------------------------------------------------------------
-dnl Doxygen Support
-dnl ---------------------------------------------------------------------------
-
-DX_HTML_FEATURE(ON)
-DX_CHM_FEATURE(OFF)
-DX_CHI_FEATURE(OFF)
-DX_MAN_FEATURE(OFF)
-DX_RTF_FEATURE(OFF)
-DX_XML_FEATURE(OFF)
-DX_PDF_FEATURE(OFF)
-DX_PS_FEATURE(OFF)
-
-DX_INIT_DOXYGEN([$PACKAGE_NAME],[doxygen.cfg])
-
 dnl ---------------------------------------------------------------------------
 dnl Additional build flags
 dnl ---------------------------------------------------------------------------
-if test x$GCC = xyes
-then
-	CLD_CHECK_FLAG([-g])
-	CLD_CHECK_FLAG([-Wall])
-	CLD_CHECK_FLAG([-Wextra])
-	CLD_CHECK_FLAG([-Wno-deprecated-declarations])
-	CLD_CHECK_FLAG([-Wmissing-prototypes])
-	CLD_CHECK_FLAG([-Wshadow])
-	CLD_CHECK_FLAG([-Wpointer-arith])
-	CLD_CHECK_FLAG([-Wstrict-prototypes])
-	CLD_CHECK_FLAG([-Wcast-qual])
-	CLD_CHECK_FLAG([-Wwrite-strings])
-	CLD_CHECK_FLAG([-pedantic])
-fi
-
-dnl ---------------------------------------------------------------------------
-dnl Pretty-Print Results
-dnl ---------------------------------------------------------------------------
-
-echo ''
-echo '########### CLDD CONFIGURATION ############'
-
-printf '\nClient support:\n\t'
-results(ipv6, "IPv6")
-results(tcp, "TCP")
-results(un,[UNIX Domain Sockets])
-
-printf '\n\n##########################################\n\n'
-
-echo 'Generating files needed for compilation'
+AS_IF([test "x$GCC" != "xno"],
+      [CC_CHECK_FLAG([-Wall])]
+      [CC_CHECK_FLAG([-Wextra])]
+      [CC_CHECK_FLAG([-Wno-deprecated-declarations])]
+      [CC_CHECK_FLAG([-Wmissing-prototypes])]
+      [CC_CHECK_FLAG([-Wshadow])]
+      [CC_CHECK_FLAG([-Wpointer-arith])]
+      [CC_CHECK_FLAG([-Wstrict-prototypes])]
+      [CC_CHECK_FLAG([-Wcast-qual])]
+      [CC_CHECK_FLAG([-Wwrite-strings])]
+      [CC_CHECK_FLAG([-pedantic])])
 
 dnl ---------------------------------------------------------------------------
 dnl Generate files
 dnl ---------------------------------------------------------------------------
-AC_OUTPUT([
+AC_CONFIG_FILES([
 	Makefile
+    data/Makefile
+    data/conf/Makefile
+    data/rc.d/Makefile
+    man/Makefile
 	src/Makefile
-	tests/Makefile
+	vapi/Makefile
 ])
+AC_OUTPUT
 
-echo 'CLDD is ready for compilation, type "make" to begin.'
+dnl ---------------------------------------------------------------------------
+dnl Build report
+dnl ---------------------------------------------------------------------------
+echo
+echo "$PACKAGE ($VERSION)"
+echo
+echo "----------------------------------------------------------------"
+echo
+echo "Prefix....................... : $ac_default_prefix"
+echo "System configuration......... : $sysconfdir"
+echo "Data directory............... : $datadir"
+echo "Package configuration........ : $pkgconfigdir"
+echo
+echo "----------------------------------------------------------------"
+echo
+echo "Debugging enabled............ : $enable_debug"
+echo
+echo "----------------------------------------------------------------"
+echo
+echo "Comedi support............... : $with_comedi"
+dnl echo "MCCUSB support............... : $with_mccusb"
+dnl echo "TS4700 support............... : $with_ts4700"
+dnl echo "TS4800 support............... : $with_ts4800"
+echo
+echo "----------------------------------------------------------------"
+echo
+eval eval echo $PACKAGE will be installed in $bindir
+echo
+echo 'configure is complete, type "make" to begin.'
